Removed border, preventing scrollbar on chrome/PC.

--- a/css/pages.css
+++ b/css/pages.css
@@ -211,8 +211,6 @@ body {
   background: url('../images/bg.png?1413466539') repeat scroll 0 0 #222222;
   font-weight: normal;
   min-height: 100%;
-  border-left: 10px solid #E3E3E3;
-  border-right: 10px solid #E3E3E3;
 }
 
 /* line 31, ../sass/pages.scss */
